k8s/radarr/deployment.yaml
# Copyright 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: radarr
  namespace: multimedia
  labels:
    app: radarr
    provider: jarvis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        provider: jarvis
    spec:
      containers:
      - name: radarr
        image: lsioarmhf/radarr-aarch64:117
        imagePullPolicy: Always
        ports:
        - name: ui
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - mountPath: /movies
          name: radarr-data
      volumes:
      - name: radarr-data
        persistentVolumeClaim:
          claimName: radarr-data
